# lexi

./: LICENSE  Makefile.am  configure.ac
include/: parsewords.hpp
src/: Makefile.am  parsewords.cpp  parsewords.hpp
